Update GraalVM to version `22.3.0`.